--- a/index.html
+++ b/index.html
@@ -2,18 +2,85 @@
   <head>
     <title>테스트 홈페이지</title>
 	<style>
-	  body.main{
-	    background:#D4F4FA;
-	  }
-	  .title {
-	    color:#5CD1E5;
-	  }
+	  
+		@import url('https://fonts.googleapis.com/css?family=Audiowide');
+
+		body.main{
+			background:#3f0055;
+		}
+		.title {
+			color:#C360FB;
+		}
+		h1.hometitle {
+			margin-top: 25px;
+		}
+		  
+		.neon {
+			font-family: 'Audiowide', cursive;
+			font-size:50px;
+			color: #ff46ff;
+			text-shadow:
+				0 0 5px #FFFFFF,
+				0 0 10px #FFFFFF,
+				0 0 20px #FFFFFF,
+				0 0 40px #FF00FF,
+				0 0 80px #FF00FF,
+				0 0 90px #FF00FF,
+				0 0 100px #FF00FF;
+			float: center;
+			background-color: rgba(255, 255, 255, 0);
+			display: inline-block;
+			border: none;
+			width:100%;
+			height:150px;
+		}
+		
+		.button {
+			-webkit-transition-duration: 0.2s;
+			float: left;
+			color: #a300da;
+			background-color:rgba(255, 255, 255, 0);
+			border: 1px solid #3f0055;
+			text-align: center;
+			text-decoration: none;
+			display: inline-block;
+			font-size: 20px;
+			font-family: 'Audiowide', cursive;
+			border-radius: 4px;
+			text-shadow: 0 0 10px;
+		}
+		
+		.button:hover {
+			background-color: #5a0079;
+			color: white;
+		}
+		
+		.menu {
+			width:100%;
+			height:50px;
+			background:rgba(255, 255, 255, 0);
+		}
+		
+		.menu-button {
+			width:25%;
+			height: 50px;
+		}
 	</style>
   </head>
   <body class="main">
     <!--타이틀-->
     <div align="center" class="title">
-	  <h1>Test Homepage</h1>
+		<h1 class="hometitle">
+			<a href="index.html">
+				<input value="SORT" type="button" class="neon">
+			</a>
+		</h1>
+	</div>
+	<div class="menu" align="center">
+		<input value="Selection Sort" type="button" class="button menu-button">
+		<input value="Bubble Sort" type="button" class="button menu-button">
+		<input value="Quick Sort" type="button" class="button menu-button">
+		<input value="Merge Sort" type="button" class="button menu-button">
 	</div>
 	<hr>
 	
@@ -28,4 +95,3 @@
 	  <p>© 2018 Neple</p>
 	</div>
   </body>
-</html>
